--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "milon/barcode": "^12.0",
-        "spatie/simple-excel": "^3.7"
+        "milon/barcode": "^12.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
